# slidebook-python

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test_and_deploy.yml
sld/: __init__.py  slidebook.py  types.py  yaml.py
tests/data/: sldy.sldy  test.yaml
tests/data/sldy.dir/: SLD274A.tmp.copy  SS_5pl_4ch.sldy.copy
tests/data/sldy.dir/StageScan1643299934.imgdir/: AnnotationRecord.yaml  AuxData.yaml  ChannelRecord.yaml  ElapsedTimes.yaml  HistogramData_Ch0_TP0000000.npy  HistogramData_Ch1_TP0000000.npy  HistogramData_Ch2_TP0000000.npy  HistogramData_Ch3_TP0000000.npy  HistogramData_Ch4_TP0000000.npy  HistogramData_Ch5_TP0000000.npy  HistogramData_Ch6_TP0000000.npy  HistogramData_Ch7_TP0000000.npy  HistogramSummary_Ch1.npy  HistogramSummary_Ch2.npy  HistogramSummary_Ch3.npy  HistogramSummary_Ch4.npy  HistogramSummary_Ch5.npy  HistogramSummary_Ch6.npy  HistogramSummary_Ch7.npy  ImageRecord.yaml  MaskRecord.yaml  SAPositionData.yaml  StagePositionData.yaml
tests/test_integration/: test_load.py
tests/test_unit/: test_yaml.py
