[bumpversion]
current_version = 0.0.1
commit = True
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<rc>\d+))?
serialize =
	{major}.{minor}.{patch}-{release}{rc}
	{major}.{minor}.{patch}

[metadata]
name = slidebook-python
url = https://github.com/instituteofcancerresearch/slidebook-python
description = Open slidebook .sldy files in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Adam Tyson
author_email = code@adamltyson.com
license = MIT
project_urls =
	Source = https://github.com/instituteofcancerresearch/slidebook-python
	Tracker = https://github.com/instituteofcancerresearch/slidebook-python/issues
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires =
	setuptools_scm

[options.extras_require]
dev =
	black
	pytest
	pytest-cov
	bump2version
	pre-commit
	flake8
	coverage
	mypy
	types-PyYAML


[bdist_wheel]
universal = 1

[flake8]
max-line-length = 79
exclude = __init__.py,build,.eggs

[bumpversion:part:release]
optional_value = prod
first_value = rc
values =
	rc
	prod

[bumpversion:part:rc]

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:sld/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[tool:pytest]
addopts = --cov=slidebook-python
