[metadata]
name = slidebook-python
version = 0.0.3
url = https://github.com/instituteofcancerresearch/slidebook-python
description = Open slidebook .sldy files in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Adam Tyson
author_email = code@adamltyson.com
license = MIT
project_urls = 
	Source = https://github.com/instituteofcancerresearch/slidebook-python
	Tracker = https://github.com/instituteofcancerresearch/slidebook-python/issues
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires = 
	setuptools_scm
install_requires = 
	numpy

[options.extras_require]
dev = 
	black
	pytest
	pytest-cov
	bump2version
	pre-commit
	flake8
	coverage
	mypy
	types-PyYAML
	isort


[flake8]
max-line-length = 79
exclude = __init__.py,build,.eggs

[tool:pytest]
addopts = --cov=sld
